2005-09-17  Sven Panne  <sven.panne@aedion.de>

	* README: Added building instructions using VisualStudio.

	* admin/.cvsignore: Ignore files generated by VisualStudio.

	* AUTHORS: Added Erik Hofman. Small reformatting.

	* alut.sln, alut.vcproj, hello_world.vcproj: Added. I have access
	to VisualStudio .NET only, so I can't maintain project files for
	older versions. Note that the OpenAL SDK is assumed to live under
	C:\OpenALSDK, not nice to hardwire this, but I don't see another
	solution currently. Help would be appreciated.

	* alut.dsp, alut.dsw, hello_world.dsp: Removed.

	* configure.ac, src/alutInternal.h, src/alutLoader.c,
	src/alutWaveform.c: As usual, Microsoft chooses to ignore
	standards, this time C99: VisualC doesn't have stdint.h, so hack
	around this omission.

	* Makefile.am: Moved m4 subdirectory to admin where it belongs.

	* admin/m4/alut_c__attribute.m4, admin/m4/alut_check_func.m4:
	Added.

	* m4/alut_c__attribute.m4, m4/alut_check_func.m4: Removed.

	* src/Makefile.am: Fixed headers.

	* .cvsignore: Ignore distribution archives.

2005-09-14  Sven Panne  <sven.panne@aedion.de>

	* src/alutError.c, src/alutInit.c, src/alutLoader.c,
	src/alutUtil.c, src/alutVersion.c, src/alutWaveform.c: Use
	alutInternal.h.

	* src/alutInternal.h: Added. This file should be #included as the
	first header in all *.c files.

	* src/alutError.h, src/alutInit.h: Removed

	* Makefile.am, examples/Makefile.am, src/Makefile.am,
	test_suite/Makefile.am: Automatically build examples and test
	suite now. Moved local autoconf macros to a separate
	directory. Added a few comments.

	* m4/alut_c__attribute.m4, m4/alut_check_func.m4: Added.

	* acinclude.m4: Removed

2005-09-13  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/alutLoader.c, src/alutWaveform.c: A few
	compatibility hacks to make it compile on Linux, MinGW/MSYS and
	Cygwin.

	* acinclude.m4: Added.

2005-09-12  Sven Panne  <sven.panne@aedion.de>

	* admin/.cvsignore: Improved ignorance.
